# file-manager

./: README.md  pyproject.toml
src/intent_classifier/: __init__.py  file_manager.py
tests/: test_file_manager.py
